Modificacion de las descripciones de los libros...

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>El señor de los anillos: La comunidad del anillo</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap CSS templates.</p>
+                                            <p>Acompañemos a Frodo Bolson un hobbit de lo mas peculiar en su travesia en busqueda de la destruccion del anillo que lo dominara a todo.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -165,7 +165,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Harry Potter y la piedra Filosofal</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap themes.</p>
+                                            <p>Sigamos de cerca la historia del mago Harry Potter, El niño que vivio...</p>
                                         </div>
                                     </div>
                                 </div>
@@ -176,7 +176,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>El hobbit</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap layouts.</p>
+                                            <p>Adentrate en una nueva aventura con Bilbo Bolson para encontrar los secretos que le acechan </p>
                                         </div>
                                     </div>
                                 </div>
@@ -187,7 +187,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Juego de tronos 1</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap templates.</p>
+                                            <p>El primer libro de la aclamada historia game of thrones te mantendra al filo de la cordura mientras te desenlazas en su historia.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>El nombre del viento</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download Bootstrap CSS templates.</p>
+                                            <p>El nombre del viento. Crónica del asesino de reyes: primer día es una novela de fantasía épica, perteneciente a la serie Crónica del Asesino de Reyes.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -209,7 +209,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>El Maravilloso Mago De Oz</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap templates.</p>
+                                            <p>El maravilloso mago de Oz es un libro de literatura infantil escrito por Lyman Frank Baum e ilustrado por W. W. Denslow.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -220,7 +220,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>La espada rota</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap templates.</p>
+                                            <p>La espada rota es una novela fantástica escrita por Poul Anderson en 1954, el mismo año que La Comunidad del Anillo de J. R. R. Tolkien.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -231,7 +231,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>La Historia Interminable</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap templates.</p>
+                                            <p> la novela expresa el deseo de encontrar la realidad que nos rodea a través de recorrer el camino inverso, es decir, la parte interna de cada uno que reside en su imaginación.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -242,7 +242,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Conan el cimmerio</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap templates.</p>
+                                            <p>Conan es uno de los héroes más grandes jamás inventados: el bárbaro cimmerio que con su espada se abre camino a través de las tierras de la Edad Hiboria.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -270,7 +270,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Programacion en C++</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap CSS templates.</p>
+                                            <p>Aprende a programar en c++ con este maravilloso libro!</p>
                                         </div>
                                     </div>
                                 </div>
@@ -281,7 +281,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Programacion en c For dummies</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap themes.</p>
+                                            <p>Este libro te enseñara a programar en c sin importar que seas principiante.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -292,7 +292,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Programacion estructurada</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap layouts.</p>
+                                            <p>Aprende el arte de la programacion estructurada con este libro.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -303,7 +303,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Eloquent javascript</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap templates.</p>
+                                            <p>Aprende las bases principales de la programacion en javascript.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -314,7 +314,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Python</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download Bootstrap CSS templates.</p>
+                                            <p>Aprende a programar en python con este buen libro.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -325,7 +325,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                         <div class="thumb-inner animate" data-animate="fadeInUp">
                                             <h4>Yo tambien puedo programar</h4>
-                                            <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap templates.</p>
+                                            <p>Demuestrales a todos que tu tambien puedes programar con este increible libro!</p>
                                         </div>
                                     </div>
                                 </div>
@@ -354,7 +354,7 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>El bazar de los sueños</h4>
-                                                <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap CSS templates.</p>
+                                                <p>Puede que la clave de la felicidad siempre haya estado allí...</p>
                                             </div>
                                         </div>
                                     </div>
@@ -365,7 +365,7 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Los juegos del hambre</h4>
-                                                <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap themes.</p>
+                                                <p>Apoyemos a katniss everdeen en el infernal juego del hambre en el que tendra que sobrevivir a toda costa</p>
                                             </div>
                                         </div>
                                     </div>
@@ -376,7 +376,7 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>El Perfume</h4>
-                                                <p>Please tell your friends about it. Templatemo is the best website to download free Bootstrap layouts.</p>
+                                                <p>El amor de Jean-Baptiste Grenouille por los aromas lo lleva a sobrepasar todos los límites para obtener sus anhelados perfumes..</p>
                                             </div>
                                         </div>
                                     </div>
@@ -403,7 +403,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="input-field">
                                         <input class="form-control" name="correo" id="correo" required placeholder="correo"></input>
                                     </div>
-                                    <button class="btn" type="submit">Enviar verificacion al correocorreo</button>
+                                    <button class="btn" type="submit">Enviar verificacion al correo</button>
                                 </form>
                             </div>
                         </div>
