--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ https://templatemo.com/tm-528-elegance
                         <div class="col-md-7 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
                                 <span>A comprar!</span>
-                                <h2>Llene el formulario para que se le envie al correo la informacion para realizar la compra!</h2>
+                                <h2>Llene el formulario para que se le envie al correo la informacion de como realizar la compra!</h2>
                             </div>
                             <div class="contact-section">
                                 <div class="row">
@@ -437,22 +437,34 @@ https://templatemo.com/tm-528-elegance
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
                                         <form id="ajax-contact" method="post" action="#">
                                             <div class="custom-select-lg">
+                                                <select name="envio" id="envio">
+                                                    <option value="correo">Enviar por Correo</option>
+                                                    <option value="whats">Enviar por WhatsApp</option>
+                                                </select>
+                                            </div>
+                                            <div class="custom-select-lg">
+                                                <select name="pago" id="pago">
+                                                    <option value="cred">Tarjeta de credito</option>
+                                                    <option value="cheq">Por cheque</option>
+                                                </select>
+                                            </div>
+                                            <div class="custom-select-lg">
                                                 <select name="libro" id="libro">
-                                                    <option value="INCO">Harry Potter y la piedra filosofal $80</option>
-                                                    <option value="INFO">El hobbit $130</option>
-                                                    <option value="INCO">Juego de Tronos $200</option>
-                                                    <option value="INFO">El nombre del viento $70</option>
-                                                    <option value="INCO">El maravilloso mago de Oz $120</option>
-                                                    <option value="INFO">La espada rota $40</option>
-                                                    <option value="INCO">La historia interminable $160</option>
-                                                    <option value="INFO">Conan el cimmero $100</option>
-                                                    <option value="INCO">Programacion en c++ $120</option>
-                                                    <option value="INFO">Programacion en c para dummies $50</option>
-                                                    <option value="INCO">Eloquent Javascript $160</option>
-                                                    <option value="INFO">Yo tambien puedo programar $100</option>
-                                                    <option value="INFO">Los juegos del hambre $100</option>
-                                                    <option value="INCO">El perfume $70</option>
-                                                    <option value="INFO">El bazar de los sueños $100</option>
+                                                    <option value="harr">Harry Potter y la piedra filosofal $80</option>
+                                                    <option value="hobb">El hobbit $130</option>
+                                                    <option value="tron">Juego de Tronos *Fuera de stock*</option>
+                                                    <option value="vien">El nombre del viento $70</option>
+                                                    <option value="mago">El maravilloso mago de Oz *Fuera de stock*</option>
+                                                    <option value="rota">La espada rota $40</option>
+                                                    <option value="hist">La historia interminable $160</option>
+                                                    <option value="cona">Conan el cimmero *Fuera de stock*</option>
+                                                    <option value="cmas">Programacion en c++ $120</option>
+                                                    <option value="proc">Programacion en c para dummies $50</option>
+                                                    <option value="java">Eloquent Javascript $160</option>
+                                                    <option value="tamb">Yo tambien puedo programar $100</option>
+                                                    <option value="hamb">Los juegos del hambre $100</option>
+                                                    <option value="perf">El perfume $70</option>
+                                                    <option value="baza">El bazar de los sueños *Fuera de stock*</option>
                                                 </select>
                                             </div>
                                             <div class="input-field">
@@ -460,6 +472,9 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="input-field">
                                                 <input class="form-control" name="email" id="email" required placeholder="email"></input>
+                                            </div>
+                                            <div>
+                                                <p> *Por cada compra, los proovedores se llevan una parte de ganancia *</p>
                                             </div>
                                             <button class="btn" type="submit">Enviar correo</button>
                                         </form>
