Modificacion de texto

--- a/index.html
+++ b/index.html
@@ -452,19 +452,19 @@ https://templatemo.com/tm-528-elegance
                                                 <select name="libro" id="libro">
                                                     <option value="harr">Harry Potter y la piedra filosofal $80</option>
                                                     <option value="hobb">El hobbit $130</option>
-                                                    <option value="tron">Juego de Tronos *Fuera de stock*</option>
+                                                    <option value="tron">Juego de Tronos *No disponible*</option>
                                                     <option value="vien">El nombre del viento $70</option>
-                                                    <option value="mago">El maravilloso mago de Oz *Fuera de stock*</option>
+                                                    <option value="mago">El maravilloso mago de Oz *No disponible*</option>
                                                     <option value="rota">La espada rota $40</option>
                                                     <option value="hist">La historia interminable $160</option>
-                                                    <option value="cona">Conan el cimmero *Fuera de stock*</option>
+                                                    <option value="cona">Conan el cimmero *No disponible*</option>
                                                     <option value="cmas">Programacion en c++ $120</option>
                                                     <option value="proc">Programacion en c para dummies $50</option>
                                                     <option value="java">Eloquent Javascript $160</option>
                                                     <option value="tamb">Yo tambien puedo programar $100</option>
                                                     <option value="hamb">Los juegos del hambre $100</option>
                                                     <option value="perf">El perfume $70</option>
-                                                    <option value="baza">El bazar de los sueños *Fuera de stock*</option>
+                                                    <option value="baza">El bazar de los sueños *No disponible*</option>
                                                 </select>
                                             </div>
                                             <div class="input-field">
